# Microblog-Flask-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
nginx/: nginx.conf
src/: app.py  config.py  database.py  exceptions.py  main.py  models.py  openapi.json  schemas.py  utils.py  view_medias.py  view_tweets.py  view_users.py
src/swagger/: components.yml  get_user_id.yml  get_user_me.yml  post_media.yml  post_tweet.yml  post_user_follow.yml  users.yml
test/: conftest.py  pytest.ini  test_main.py
