[tool.poetry]
name = "microblog-flask-"
version = "0.1.0"
description = ""
authors = ["SRubtsov <frexrub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.30"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"
flasgger = "0.9.7b2"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
